[FIX] sap.m.IconTabBar: Adjust responsive paddings for Belize theme
Misalignment has been identified between the paddings
of the IconTabBar, its content and the Header area within the Belize
theme when viewed in desktop mode. To resolve this issue, this change
introduces a modification to the existing paddings specifically for the
Belize theme. This ensures that they're aligned properly across all
components, improving overall UI consistency.

SNOW: CS20240007052684

--- a/src/themelib_sap_belize/src/sap/m/themes/sap_belize/IconTabBar.less
+++ b/src/themelib_sap_belize/src/sap/m/themes/sap_belize/IconTabBar.less
@@ -241,3 +241,16 @@ html.sap-desktop {
 		}
 	}
 }
+
+.sapFDynamicPage-Std-Desktop {
+	.sapUiResponsiveContentPadding {
+		.sapMITH,
+		&.sapMITH {
+			padding: 0 3rem !important;
+		}
+
+		.sapMITBContent {
+			padding: 1rem 3rem !important;
+		}
+	}
+}
