--- a/src/themelib_sap_belize/src/sap/m/themes/sap_belize_hcb/IconTabBar.less
+++ b/src/themelib_sap_belize/src/sap/m/themes/sap_belize_hcb/IconTabBar.less
@@ -215,3 +215,16 @@ html.sap-desktop {
 		background-color: @sapUiContentIconColor;
 	}
 }
+
+.sapFDynamicPage-Std-Desktop {
+	.sapUiResponsiveContentPadding {
+		.sapMITH,
+		&.sapMITH {
+			padding: 0 3rem !important;
+		}
+
+		.sapMITBContent {
+			padding: 1rem 3rem !important;
+		}
+	}
+}
